--- a/app/components/statistic_component.html.erb
+++ b/app/components/statistic_component.html.erb
@@ -1,4 +1,9 @@
 <Statistic class="statistic">
-  <h3 id="statistic-<%= name.parameterize %>" data-total="<%= total %>">0</h3>
   <span><%= name %></span>
+  <h3 id="statistic-<%= name.parameterize %>" data-total="<%= total %>">0</h3>
+  <% if @stat.present? %>
+    <div class="dropdown dropleft">
+      <a class="dropdown-item text-muted" href="<%= @stat[0] %>" data-remote="true" data-toggle="modal" data-target="#modal-window"><i class="far fa-edit"></i></a>
+    </div>
+  <% end %>
 </Statistic>
