--- a/app/views/requests/_new_total.html.erb
+++ b/app/views/requests/_new_total.html.erb
@@ -62,7 +62,7 @@
             </div>
           <% else %>
             <div class="col-md-12">
-              <p>You have no data yet. There are no columns of data to query.</p>
+              <p>This database has no data yet.</p>
             </div>
           <% end %>
         </div>
