table show newest first

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
             style: 'multi',
             selector: 'td:first-child'
           },
-          order: [[ 1, 'asc' ]],
+          order: [[ 1, 'desc' ]],
           dom: 'Bfrtip',
           buttons: [
             {
